增加文档，安装包，压缩包 UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
 
-    <string name="title">快客</string>
+    <string name="title">绿霸</string>
     <string name="all">总共：</string>
     <string name="reading">正在读取</string>
     <string name="gb">GB</string>
